# plasmabob

./: .gitignore  AGENTS.md  ARCH_REVIEW.md  Cargo.toml  README.md  TODO.md  architecture_review.md  gen_hitbox.py
.github/: copilot-instructions.md
.github/workflows/: release.yml
.opencode/: oh-my-opencode.json
artwork/prompts/: generate_world_asset_inspiration.md
assets/debug/: testlevel.json
assets/entity_types/: barrel1.json  betty.json  bob.json  cockroach.json  exit.json  flora1.json  flora2.json  healthpotion.json  mountain1.json  player.json  poisonplant.json  rangecockroach.json  runestone1.json  stone-platform-1.json  stone-platform-2.json  stone-platform-3.json  stoneplatform1.json  stoneplatform2.json  stoneplatform3.json  street.json
assets/i18n/: de.json  en.json
assets/levels/: entity_types.json  level1.json
assets/worlds/: auralis.json
editor/: AGENTS.md  Cargo.toml  README.md  build.rs
editor/assets/: component_value_mapping.json
editor/src/: dashboard.rs  editor.rs  entity_types.rs  io.rs  main.rs  model.rs
editor/src/core/: io.rs  mod.rs  model.rs  table_ui.rs  ui.rs
editor/src/core/components_overrides/: array_property.rs  bool_property.rs  enum_property.rs  json_property.rs  level_table.rs  mod.rs  number_property.rs  string_property.rs
editor/src/core/components_overrides/array_editor/: format.rs  mod.rs  modal.rs  modal_helpers.rs  parse.rs
editor/src/core/components_overrides/entity_type_table/: cells.rs  layout.rs  mod.rs  render.rs  rows.rs  section.rs
editor/src/dashboard/: level_picker.rs  mod.rs  run.rs
editor/src/editor/: mod.rs  table_ui.rs
editor/src/editor/core/: mod.rs
editor/src/entity_type/: array_editor.rs  array_property.rs  bool_property.rs  components_sidebar.rs  enum_property.rs  helpers.rs  hitbox.rs  json_property.rs  mod.rs  number_property.rs  string_property.rs  view.rs
editor/src/level/: helper.rs  input.rs  mod.rs  run.rs  scene.rs  state.rs  ui.rs
src/: app_model.rs  audio_settings.rs  fonts.rs  i18n.rs  key_bindings.rs  level.rs  lib.rs  main.rs  world.rs
src/game/: AGENTS.md  debug_stats.rs  game_view.rs  level.rs  mod.rs  view_api.rs  world.rs
src/helper/: active_character.rs  asset_io.rs  audio_settings.rs  audio_toast.rs  fonts.rs  i18n.rs  input.rs  key_bindings.rs  mod.rs  music.rs  override_helpers.rs  particles.rs  settings.rs  sounds.rs
src/views/: about_egui.rs  about_view.rs  load_view.rs  lose_view.rs  main_view.rs  mod.rs  settings_egui.rs  settings_view.rs  start_view.rs  story_view.rs  win_view.rs  world_map_view.rs
tools/: transform_levels.py
tools/level_backups/: aqueon_level1.json.bak  aqueon_level10.json.bak  aqueon_level2.json.bak  aqueon_level3.json.bak  aqueon_level4.json.bak  aqueon_level5.json.bak  aqueon_level6.json.bak  aqueon_level7.json.bak  aqueon_level8.json.bak  aqueon_level9.json.bak  auralis.json.bak  solkhar_level1.json.bak  solkhar_level10.json.bak  solkhar_level2.json.bak  solkhar_level3.json.bak  solkhar_level4.json.bak  solkhar_level5.json.bak  solkhar_level6.json.bak  solkhar_level7.json.bak  solkhar_level8.json.bak  (+31 more)
(+523 files in other folders)
