[package]
name = "PlasmaBob"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.2.0"
bevy = { version = "0.15", features = ["jpeg", "wayland"] }
bevy_framepace = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pollster = "0.4"

[profile.dev]
opt-level = 1        # leichte Optimierung – Bevy läuft sonst bei opt-level=0 sehr langsam
debug = 1            # nur Line-Tables statt voller Debug-Info → schnelleres Linking
# kein lto – LTO verlangsamt jeden Incremental-Build massiv

[profile.dev.package."*"]
opt-level = 3        # Dependencies werden einmal voll optimiert und dann gecacht

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

