[package]
name = "plasmabob-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["jpeg", "wayland"] }
bevy_egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

